...
class SubscriptionSelectionView: UIView {

    //MARK:- IBOutlets
    @IBOutlet weak var munchiesSelectionContainerView: UIView!
    @IBOutlet weak var proceedCheckoutButton: UIButton! {
        didSet {
            proceedCheckoutButton.accessibilityIdentifier = "button--proceedCheckoutButton"
            proceedCheckoutButton.backgroundColor = .white
            proceedCheckoutButton.setTitleColor(.warmPink, for: .normal)
            proceedCheckoutButton.roundCorners(corners: [.topLeft, .topRight], radius: 20.0)
        }
    }
    @IBOutlet weak var addMunchiesInformationLabel: UILabel!
...
    }
    
    //MARK:- Init
    override init(frame: CGRect) {
        super.init(frame: frame)
        //UI testing
        accessibilityIdentifier = "customview--SubscriptionSelectionView"
        loadNib()
        initialSetup()
    }

    required init?(coder: NSCoder) {
        super.init(coder: coder)
...
