...
    private var currentState: StackedYouCurrentState = .none
    
    //MARK:- Init
    override init(frame: CGRect) {
        super.init(frame: frame)
        //UI testing
        accessibilityIdentifier = "customview--CardSelectionView"
        loadNib()
        initialSetup()
    }

    required init?(coder: NSCoder) {
        super.init(coder: coder)
...
